Implemented small changes to make the game more robust